The petition form now contains an 'experimental' image cropper - a client side tool that overlays a mask on top of a suggested petition image and can be resized at a fixed ratio of 14/10. The petition image is responsive and its display gets resized if it's overly large. The tool allows to extract the x and y starting coordinates of the crop field and its size.

--- a/public/css/actionite.css
+++ b/public/css/actionite.css
@@ -141,3 +141,13 @@ body:before {
   width:0;
   margin-top:-32767px;/
 }
+
+/*STYLING FOR IMAGE CROPPER IN PETITION/DONATION CREATION*/
+#image_preview {
+  overflow: hidden;
+  height: 350px;
+}
+
+#image_preview * {
+  max-height: 100%;
+}
